selfhost/test/typechecker/for/error_bad_iterator.out
Error at %FILE_NAME%:1:10
Forbidden type for for-loop target
  |  for x in 123 {
              ^
Type Int is not iterable
